# tool_ext_auto_load_mail_vtp

./: .env.example  .gitignore  CREDENTIALS_GUIDE.md  README.md  app.py  build.bat  debug_run.py  email_scan_results.json  email_templates_analysis.json  jt_template_J&T_COD_20-03.html  jt_template_J&T_E-Invoice_31784.html  pyproject.toml  requirements-dev.txt  requirements.txt  scan_email_templates.py
.agent/rules/: 01_project_context.md  02_coding_standards.md  03_security.md  04_architecture.md  05_error_handling.md  06_testing.md  07_performance.md  08_git_workflow.md
.agent/skills/skills/metasploit-framework/: SKILL.md
config/: download_history.json  processed_emails.json  rules.json  settings.json
docs/: ARCH_data_flow.md  ARCH_system_architecture.md  CHANGELOG.md  CORE_file_downloader.md  CORE_gmail_client.md  CORE_handler_system.md  CORE_link_extractor.md  CORE_rule_engine.md  FEATURE_gui_application.md  FEATURE_roadmap.md  FEATURE_scheduler.md  INDEX.md  OPS_build_packaging.md  OPS_logging_monitoring.md  SPECS_coding_standards.md  SPECS_dependencies.md  SPECS_error_handling.md  SPECS_security_credentials.md  SPECS_testing_strategy.md  USER_GUIDE_vi.md
src/: __init__.py  download_history.py  file_downloader.py  gmail_client.py  link_extractor.py  models.py  rule_engine.py  scheduler.py  tray_icon.py
src/handlers/: __init__.py  base.py  generic.py  jt_express.py  registry.py  viettel_post.py
tests/: test_file_downloader.py  test_handlers.py  test_link_extractor.py  test_rule_engine.py
